000-liveblog-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: liveblog
  name: liveblog
