011-liveblog-elastic-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: liveblog
    role: elastic
  name: liveblog-elastic
  namespace: liveblog
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: liveblog
      role: elastic
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: liveblog
        role: elastic
    spec:
      containers:
      - name: liveblog-elastic
        image: elasticsearch:1.5
        ports:
        - containerPort: 9200
          name: elastic
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: liveblog-elastic
      volumes:
      - name: liveblog-elastic
        persistentVolumeClaim:
          claimName: liveblog-elastic
