012-liveblog-nfs-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: liveblog
    role: nfs
  name: liveblog-nfs
  namespace: liveblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liveblog
      role: nfs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: liveblog
        role: nfs
    spec:
      containers:
      - name: liveblog-nfs
        image: itsthenetwork/nfs-server-alpine
        securityContext:
          privileged: true
        ports:
          - name: nfs
            containerPort: 2049
          - name: mountd
            containerPort: 20048
          - name: rpcbind
            containerPort: 111
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 50Mi
        volumeMounts:
        - mountPath: /nfs
          name: liveblog-nfs
      volumes:
        - name: liveblog-nfs
          persistentVolumeClaim:
            claimName: liveblog-nfs
