031-liveblog-kibana-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: liveblog
    role: kibana
  name: liveblog-kibana
  namespace: liveblog
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: liveblog
      role: kibana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: liveblog
        role: kibana
    spec:
      containers:
      - name: liveblog-kibana
        image: sourcefabric/kibana:liveblogmaster
        ports:
        - containerPort: 5601
          name: kibana-web
