051-liveblog-redis-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: liveblog
    role: redis
  name: liveblog-redis
  namespace: liveblog
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: liveblog
      role: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: liveblog
        role: redis
    spec:
      containers:
      - name: liveblog-redis
        image: redis:2.8
        ports:
        - containerPort: 27017
          name: redis
        volumeMounts:
        - mountPath: /data
          name: liveblog-redis
      volumes:
      - name: liveblog-redis
        persistentVolumeClaim:
          claimName: liveblog-redis
