061-liveblog-s3-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: liveblog
    role: s3
  name: liveblog-s3
  namespace: liveblog
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: liveblog
      role: s3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: liveblog
        role: s3
    spec:
      containers:
      - name: liveblog-s3
        image: minio/minio
        command: ["minio"]
        args: ['server', '/data']
        ports:
        - containerPort: 9000
          name: s3-web
        volumeMounts:
        - mountPath: /data
          name: liveblog-s3
      volumes:
      - name: liveblog-s3
        persistentVolumeClaim:
          claimName: liveblog-s3
