071-liveblog-superdesk-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: liveblog
    role: superdesk
  name: liveblog-superdesk
  namespace: liveblog
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: liveblog
      role: superdesk
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: liveblog
        role: superdesk
    spec:
      containers:
      - name: liveblog-superdesk
        image: sourcefabric/superdesk:liveblogmaster
        ports:
        - containerPort: 80
          name: superdesk-web
