013-liveblog-nfs-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: nfs
  labels:
    app: liveblog
  namespace: liveblog
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    role: nfs
