022-liveblog-logstash-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: syslog
  labels:
    app: liveblog
  namespace: liveblog
spec:
  ports:
    - name: syslog
      port: 5555
  selector:
    role: syslog
