033-liveblog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: pathprefix
  labels:
    app: liveblog
    role: kibana
  name: liveblog-kibana
  namespace: liveblog
spec:
  rules:
  - host: kibana.liveblog.apps.seibert-media.net
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: kibana-web
        path: /
