073-liveblog-superdesk-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: pathprefix
  labels:
    app: liveblog
    role: superdesk
  name: liveblog-superdesk
  namespace: liveblog
spec:
  rules:
  - host: liveblog.apps.seibert-media.net
    http:
      paths:
      - backend:
          serviceName: superdesk
          servicePort: superdesk-web
        path: /
